# ml-bank-lender

./: README.md  pyproject.toml
backend/: pyproject.toml
backend/src/backend/: app.py  models.py  openai_helper.py  utils.py
backend/src/backend/instance/: lendees.db
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.tsx  MockBackend.tsx  index.css  index.tsx
frontend/src/components/: Balance.tsx  BalanceGraph.tsx  ChatDialog.tsx  ComboChart.tsx  FileUploader.tsx  FilesList.tsx  LendeeInput.tsx  LendeeSelector.tsx  LoadingSpinner.tsx  ProConCard.tsx  selector.tsx  upload.tsx
frontend/src/hooks/: useLendee.tsx
frontend/src/pages/: LandingPage.tsx  OverviewPage.tsx
frontend/src/util/: backend.ts
